--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
-import Card from "../components/Card.jsx"
+import Card from "../components/Card.astro"
 ---
 
 <Layout title="The Rick and Morty">
