--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,8 +5,25 @@ import data from "../data/data.json"
 <header>
   <ul>
     {data.map((character) => 
-    <li>{character.name}</li>
-    <img src={character.image} alt="">
+    <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+      <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src={character.image} alt="rick and morty">
+      <div class="flex flex-col justify-between p-4 leading-normal">
+        <h4 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{character.name}</h4>
+        <div class="flex mb-3 font-bold text-white dark:text-gray-400">
+          <p>
+            {character.status === "Alive" ? "🟢Alive" :
+            character.status === "Dead" ? "🔴Dead" : "⚪Unknown"
+          }
+            </p>
+            <span>-</span>
+            <p>
+              {character.species}
+            </p>
+        </div>
+        
+      </div>
+      
+    </div>
     )}
   </ul>
 </header>
