--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,28 +1,37 @@
 ---
-import data from "../data/data.json"
+import data from "../data/data.json";
 ---
 
-<header class="grid gap-8 sm:grid-cols-1 lg:grid-cols-2">
-    {data.map((character) => 
-    <div class="flex items-center rounded-lg shadow md:flex row md:max-w-xl dark:border-gray-700 bg-zinc-800">
-      <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-56 md:rounded-none md:rounded-l-lg" src={character.image} alt="rick and morty">
-      <div class="flex flex-col justify-between p-4 leading-normal">
-        <h4 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{character.name}</h4>
-        <div class="flex mb-3 font-bold text-white dark:text-gray-400">
-          <p>
-            {character.status === "Alive" ? "🟢Alive" :
-            character.status === "Dead" ? "🔴Dead" : "⚪Unknown"
-          }
-            </p>
-            <span>-</span>
-            <p>
-              {character.species}
-            </p>
+<header>
+  <section
+    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
+  >
+    {
+      data.map((character) => (
+        <div class="flex items-center rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800">
+          <img
+            class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
+            src={character.image}
+            alt="rick and morty"
+          />
+          <div class="flex flex-col p-4 leading-normal align-top">
+            <h4 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+              {character.name}
+            </h4>
+            <div class="flex mb-3 font-bold text-white dark:text-gray-400">
+              <p>
+                {character.status === "Alive"
+                  ? "🟢Alive"
+                  : character.status === "Dead"
+                  ? "🔴Dead"
+                  : "⚪Unknown"}
+              </p>
+              <span>-</span>
+              <p>{character.species}</p>
+            </div>
+          </div>
         </div>
-        
-      </div>
-      
-    </div>
-    )}
-  
+      ))
+    }
+  </section>
 </header>
