--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,18 @@
 
 ---
 
-<header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
-  <div class="mx-auto text-center mb-8 lg:mb-16">
-    <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
-      Welcome to the Rick and Morty!
-    </h2>
-    <p class="font-light text-gray-500 sm-text-xl dark:text-gray-400">
-      Here you will access to about hundreds of characters, images, locations
-      and episodes of your favorite show! 🥒
-    </p>
-  </div>
-</header>
+<div class="relative">
+  <div class="absolute inset-0 object-cover bg-no-repeat bg-center z-0" style="background-image: url('../../jjj-removebg.png');"></div>
+  <header class="py-8 px-4 mx-auto lg:py-16 lg:px-6 bg-white w-full bg-fixed">
+    <div class="mx-auto text-center mb-8 lg:mb-16">
+      <h2 class="mb-4 text-7xl tracking-tight font-extrabold text-black">
+        The Rick and Morty website!
+      </h2>
+      <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
+        Here you will access to about hundreds of characters, images, locations
+        and episodes of your favorite show! 🥒
+      </p>
+    </div>
+  </header>
+</div>
+
