--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,11 +4,11 @@ import data from "../data/data.json";
 
 <header>
   <section
-    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
+    class="grid invisible gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
   >
     {
       data.map((character) => (
-        <div class="flex items-center rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800">
+        <div class="flex items-center rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800 ">
           <img
             class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
             src={character.image}
