--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,18 +2,20 @@
 
 ---
 
-<div class="relative">
-  <div class="absolute inset-0 object-cover bg-no-repeat bg-center z-0" style="background-image: url('../../jjj-removebg.png');"></div>
-  <header class="py-8 px-4 mx-auto lg:py-16 lg:px-6 bg-white w-full bg-fixed">
+<div class="relative" style="height: 700px;"> <!-- Adjust the height as needed -->
+  <div class="absolute inset-0 object-cover bg-no-repeat bg-center bg-white grayscale" style="background-image: url('../../jjj-removebg.png');"></div>
+  <header class="py-8 px-4 mx-auto lg:py-16 lg:px-6 bg-transparent w-full relative">
     <div class="mx-auto text-center mb-8 lg:mb-16">
-      <h2 class="mb-4 text-7xl tracking-tight font-extrabold text-black">
+      <h2 class="mb-4 mt-56 lg:text-8xl sm:text-6xl tracking-tight font-extrabold text-black">
         The Rick and Morty website!
       </h2>
-      <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
+      <!-- <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
         Here you will access to about hundreds of characters, images, locations
         and episodes of your favorite show! 🥒
-      </p>
+      </p> -->
     </div>
   </header>
 </div>
+
+
 
