--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import data from "../data/data.json";
 
 <header>
   <section
-    class="grid invisible gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
+    class="grid hidden gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
   >
     {
       data.map((character) => (
