--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,20 +2,22 @@
 
 ---
 
-<div> <!-- Adjust the height as needed -->
-  <img class=" bg-no-repeat bg-cover bg-center bg-black" src="../../public/a8570093aa9aeb9063e23832746890df.png" alt="" >
-  <!-- <div class="absolute inset-0 object-cover bg-no-repeat bg-center bg-white" style="background-image: url('../../jjj-removebg.png');"></div>
-  <header class="py-8 px-4 mx-auto lg:py-16 lg:px-6 bg-transparent w-full relative">
-    <div class="mx-auto text-center mb-8 lg:mb-16">
-      <h2 class="mb-4 mt-56 lg:text-8xl sm:text-6xl tracking-tight font-extrabold text-black">
-        The Rick and Morty website!
-      </h2>
-      <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
-        Here you will access to about hundreds of characters, images, locations
-        and episodes of your favorite show! 🥒
-      </p>
+<nav class="bg-gray-800">
+  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+    <div class="realtive flex h-16 items-center justify-between">
+      <div>
+        <div>
+          <!-- Favicon -->
+          <img src="../../favicon.svg" alt="favicon" width="60px">
+        </div>
+        
+
+      </div>
     </div>
-  </header> -->
+  </div>
+</nav>
+<div class="bg-cover bg-no-repeat bg-center bg-black flex justify-center">
+  <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
 </div>
 
 
