Change background color, add some styling to nav

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,13 +2,13 @@
 
 ---
 
-<nav class="bg-gray-800">
-  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-    <div class="realtive flex h-16 items-center justify-between">
-      <div>
-        <div>
+<nav class="bg-white">
+  <div class=" max-w-7xl px-2 sm:px-6 lg:px-6">
+    <div class="realtive flex h-14 items-center justify-between">
+      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+        <div class="flex flex-shrink-1 items-center">
           <!-- Favicon -->
-          <img src="../../favicon.svg" alt="favicon" width="60px">
+          <img class="h-12 mt-2 w-auto" src="../../favicon.svg" alt="favicon">
         </div>
         
 
@@ -16,7 +16,7 @@
     </div>
   </div>
 </nav>
-<div class="bg-cover bg-no-repeat bg-center bg-black flex justify-center">
+<div class="bg-cover bg-no-repeat bg-center bg-white flex justify-center">
   <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
 </div>
 
