--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: black;
+		background: white;
 		/* background: #13151a; */
 		/* background-size: 224px; */
 	}
