--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,20 +2,26 @@
 
 ---
 
-<nav class="bg-white">
-  <div class=" max-w-7xl px-2 sm:px-6 lg:px-6">
-    <div class="realtive flex h-14 items-center justify-between">
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex flex-shrink-1 items-center">
-          <!-- Favicon -->
-          <img class="h-12 mt-2 w-auto" src="../../favicon.svg" alt="favicon">
-        </div>
-        
-
-      </div>
+<nav class="bg-white flex items-center justify-between w-full">
+  <div class="max-w-7xl px-2 sm:px-6 lg:px-6 flex items-center justify-between w-full">
+    <!-- Favicon -->
+    <div class="flex-shrink-0">
+      <a href="">
+        <img class="h-12 mt-2 w-auto" src="../../favicon.svg" alt="favicon">
+      </a>
     </div>
   </div>
+
+  <!-- GitHub Logo con margen a la derecha -->
+  <div class="ml-auto mr-8"> <!-- Añadido margen a la derecha (mr-4) -->
+    <a href="#" class="flex items-center text-sm gap-6">
+      <svg class="h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg>    
+      <svg class="h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"></path></svg>
+      <button>Support us</button>
+    </a>
+  </div>
 </nav>
+
 <div class="bg-cover bg-no-repeat bg-center bg-white flex justify-center">
   <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
 </div>
