Change the favicon

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <div class="flex-shrink-0">
       <a href="">
-        <img class="h-12 mt-2 w-auto" src="../../favicon.svg" alt="favicon">
+        <img class="h-14 mt-2 w-auto border rounded-full " src="../../favicon.svg" alt="favicon">
       </a>
     </div>
   </div>
