--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 .glow-on-hover {
     position: relative;
+    color: white;
     width: 100px;
     height: 40px;
     border: none;
@@ -32,7 +33,7 @@
     width: calc(100% + 4px);
     height: calc(100% + 4px);
     animation: glowing 20s linear infinite;
-    opacity: 0;
+    opacity: 1;
     transition: opacity .3s ease-in-out;
 }
 
@@ -48,7 +49,7 @@
     opacity: 1;
 }
 
-.glow-on-hover:after {
+/* .glow-on-hover:after {
     z-index: -1;
     content: '';
     width: 100%;
@@ -58,10 +59,11 @@
     width: 100%;
     height: 100%;
     background: white;
-}
+} */
 
 @keyframes glowing {
     0% { background-position: 0 0; }
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
