--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 .glow-on-hover {
     position: relative;
     color: white;
+    font-size: 16px;
     width: 100px;
     height: 40px;
     border: none;
