Add tilt code and tild div to cards

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<slot />
+		<script src="../data/vanilla-tilt.js"></script>
 	</body>
 </html>
 <style is:global>
