--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,13 +2,13 @@
 import data from "../data/data.json";
 ---
 
-<header>
+<header class="bg-stone-950">
   <section
-    class="grid hidden gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36" 
+    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36 bg-stone-950" 
   >
     {
       data.map((character) => (
-        <div class="flex items-center rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800 ">
+        <div class="flex items-center mt-8 mb-6 rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.8">
           <img
             class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
             src={character.image}
@@ -18,7 +18,7 @@ import data from "../data/data.json";
             <h4 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
               {character.name}
             </h4>
-            <div class="flex mb-3 font-bold text-white dark:text-gray-400">
+            <div class="flex mb-1 font-bold text-white dark:text-gray-400">
               <p>
                 {character.status === "Alive"
                   ? "🟢Alive"
@@ -26,8 +26,13 @@ import data from "../data/data.json";
                   ? "🔴Dead"
                   : "⚪Unknown"}
               </p>
-              <span>-</span>
+              <span class="mx-1">-</span>
               <p>{character.species}</p>
+            </div>
+            <div class="mt-3">
+              <p class="flex mb-1 text-white dark:text-gray-400">Origin:</p>
+              <p class="text-white">{character.origin.name}</p>
+              
             </div>
           </div>
         </div>
