--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,9 +2,9 @@
 import data from "../data/data.json";
 ---
 
-<header class="bg-stone-950">
+<header class="bg-zinc-900">
   <section
-    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36 bg-stone-950" 
+    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36 bg-zinc-900" 
   >
     {
       data.map((character) => (
@@ -32,7 +32,6 @@ import data from "../data/data.json";
             <div class="mt-3">
               <p class="flex mb-1 text-white dark:text-gray-400">Origin:</p>
               <p class="text-white">{character.origin.name}</p>
-              
             </div>
           </div>
         </div>
