--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,13 +4,19 @@ import data from "../data/data.json";
 
 <header class="bg-zinc-900">
   <section
-    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36 bg-zinc-900" 
+    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-36 bg-zinc-900"
   >
     {
       data.map((character) => (
-        <div class="flex items-center mt-8 mb-6 rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800" data-tilt data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.8">
+        <div
+          class="flex items-stretch mt-8 mb-6 rounded-lg shadow md:max-w-xl border-gray-700 bg-zinc-800"
+          data-tilt
+          data-tilt-scale="1.1"
+          data-tilt-glare
+          data-tilt-max-glare="0.8"
+        >
           <img
-            class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
+            class="object-cover w-full rounded-t-lg h-full md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
             src={character.image}
             alt="rick and morty"
           />
@@ -29,9 +35,29 @@ import data from "../data/data.json";
               <span class="mx-1">-</span>
               <p>{character.species}</p>
             </div>
-            <div class="mt-3">
-              <p class="flex mb-1 text-white dark:text-gray-400">Origin:</p>
-              <p class="text-white">{character.origin.name}</p>
+            <div class="flex">
+              <div class="w-1/2 p-4">
+                <div class="flex flex-col">
+                  <p class="mb-1 text-white dark:text-gray-400">Type:</p>
+                  <p class="text-white">
+                    {character.type === "" ? "Unknown" : character.type}
+                  </p>
+                </div>
+                <div class="flex flex-col">
+                  <p class="mb-1 text-white dark:text-gray-400">Gender:</p>
+                  <p class="text-white">{character.gender}</p>
+                </div>
+              </div>
+              <div class="w-1/2 p-4">
+                <div class="flex flex-col">
+                  <p class="mb-1 text-white dark:text-gray-400">Origin:</p>
+                  <p class="text-white">{character.origin.name}</p>
+                </div>
+                <div class="flex flex-col">
+                  <p class="mb-1 text-white dark:text-gray-400">Location:</p>
+                  <p class="text-white">{character.location.name}</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
