Add background to main page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<nav class="bg-white flex items-center justify-between w-full">
+<nav class="bg-transparent flex items-center justify-between w-full">
   <div class="max-w-7xl px-2 sm:px-6 lg:px-6 flex items-center justify-between w-full">
     <!-- Favicon -->
     <div class="flex-shrink-0">
@@ -28,9 +28,10 @@
     </div>
   </div>
 </nav>
-
-<div class="bg-cover bg-no-repeat bg-center bg-white flex justify-center">
-  <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
+<div class="bg-cover bg-no-repeat bg-center h-screen" style="background-image: url('../../200206_01_Particle-star-fall-seamless-loop.webp');">
+  <div class="h-full flex justify-center items-center">
+    <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
+  </div>
 </div>
 
 
