Change main background

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
     </div>
   </div>
 </nav>
-<div class="bg-cover bg-no-repeat bg-center h-screen" style="background-image: url('../../200206_01_Particle-star-fall-seamless-loop.webp');">
+<div class="bg-cover bg-no-repeat bg-center h-full" style="background-image: url('../../cats.jpg');">
   <div class="h-full flex justify-center items-center">
     <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
   </div>
