--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <div class="flex-shrink-0">
       <a href="">
-        <img class="h-12 mt-2 w-auto border-2 rounded-full border-black" src="../../favicon.svg" alt="favicon">
+        <img class="h-12 mt-2 mb-2 w-auto border-2 rounded-full border-black" src="../../favicon.svg" alt="favicon">
       </a>
     </div>
   </div>
@@ -21,7 +21,7 @@
       <a href="https://www.linkedin.com/in/dagmara-grabowska/">
         <svg class="h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"></path></svg>
       </a>
-      <button class="glow-on-hover btn" type="button">
+      <button class="glow-on-hover mb-2 btn" type="button">
       <span>Support us</span>
       </button>
       
