--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,9 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: white;
+		background-image: url("../../public/cats.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
 		/* background: #13151a; */
 		/* background-size: 224px; */
 	}
