Change background, favicon and add footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,12 +2,13 @@
 
 ---
 
-<nav class=" opacity-90 flex items-center justify-between w-full">
+<div class="inset-0 bg-cover bg-no-repeat bg-center h-full" style="background-image: url('../../cats.jpg')">
+<nav class="flex items-center justify-between w-full">
   <div class="max-w-7xl px-2 sm:px-6 lg:px-6 flex items-center justify-between w-full">
     <!-- Favicon -->
     <div class="flex-shrink-0">
       <a href="">
-        <img class="h-12 mt-2 mb-2 w-auto border-2 rounded-full border-black" src="../../favicon.svg" alt="favicon">
+        <img class="h-14 mt-2 mb-2 w-auto border-2 rounded-full border-black" src="../../favicon.svg" alt="favicon">
       </a>
     </div>
   </div>
@@ -26,11 +27,15 @@
     </div>
   </div>
 </nav>
-<div class="bg-cover bg-no-repeat bg-center h-full">
   <div class="h-full flex justify-center items-center">
     <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
   </div>
 </div>
+<footer>
+  <div>
+    Deploy by
+  </div>
+</footer>
 
 
 
