--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
 		<link rel="stylesheet" href="../../public/style.css">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
@@ -36,9 +36,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-image: url("../../public/cats.jpg");
-		background-repeat: no-repeat;
-		background-size: cover;
+		background: white;
 		/* background: #13151a; */
 		/* background-size: 224px; */
 	}
