--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-
+ 
 ---
 
 <div class="inset-0 bg-cover bg-no-repeat bg-center h-full" style="background-image: url('../../cats.jpg')">
@@ -31,11 +31,11 @@
     <img src="../../rick-and-morty-pixel.gif" alt="Rick and Morty" width="600px" >
   </div>
 </div>
-<footer>
-  <div>
-    Deploy by
-  </div>
-</footer>
+<section>
+  <label for="searchbox"></label>
+  <input type="search" class="input mb-5 w-72" id="searchbox" placeholder="Search for your favorite characters!">
+</section>
+
 
 
 
