--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: white;
+		background: #18181b;
 		/* background: #13151a; */
 		/* background-size: 224px; */
 	}
