Round all the corners of the cards

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ import data from "../data/data.json"
           data-tilt-max-glare="0.8"
         >
           <img
-            class="object-cover w-full rounded-t-lg h-full md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
+            class="object-cover w-full rounded-lg h-full md:h-auto md:w-56 md:rounded-none md:rounded-l-lg"
             src={character.image}
             alt="rick and morty"
           />
