--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,7 +5,7 @@ import data from "../data/data.json"
 
 <header class="bg-zinc-900">
   <section
-    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center m-20 bg-zinc-900"
+    class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 justify-center sm:mx-16 md:mx-36 bg-zinc-900"
   >
     {
       data.map((character) => (
