--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
   <div class="max-w-7xl px-2 sm:px-6 lg:px-6 flex items-center justify-between w-full">
     <!-- Favicon -->
     <div class="flex-shrink-0">
-      <a href="">
+      <a href="" class="pointer">
         <img class="h-14 mt-2 mb-2 w-auto border-2 rounded-full border-black" src="../../favicon.svg" alt="favicon">
       </a>
     </div>
