--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,12 @@
 import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 import Card from "../components/Card.astro"
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="The Rick and Morty">
 	<main> 
 		<Header />
 		<Card />
+		<Footer />
 	</main>
