--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 
-<footer class="bg-white h-72">
-    <div >
+<footer class="bg-lime-500 h-72 flex justify-center">
+    <div class="text-white font-bold m-10">
       Deploy by
     </div>
   </footer>
