Add styling to footer, erase search bar from header and add it to the search bar component file

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 
-<footer class="bg-lime-500 h-72 flex justify-center">
-    <div class="text-white font-bold m-10">
+<footer class="bg-lime-100 h-56 flex justify-center">
+    <div class="text-black font-bold m-8">
       Deploy by
     </div>
   </footer>
