--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@ import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 import Card from "../components/Card.astro"
 import Footer from '../components/Footer.astro';
+import SearchBar from "../components/SearchBar.astro"
 ---
 
 <Layout title="The Rick and Morty">
 	<main> 
 		<Header />
+		<SearchBar />
 		<Card />
 		<Footer />
 	</main>
