Add a simple comment on the searchbar file

--- a/src/components/SearchBar.astro
+++ b/src/components/SearchBar.astro
@@ -1,5 +1,5 @@
 ---
-
+// Logic to make conffeti when click on the click button
 ---
 {
     <div class="flex flex-col items-center text-white text-2xl font-bold m-8">
