--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #FCE46D, #A1140A, #160440, #08C952, #EDCF6B);
+    background: linear-gradient(45deg, #44281d, #e4a788, #f0e14a, #97ce4c, #e89ac7);
     background-size: 400%;
     z-index: -1;
     top: 0;
