--- a/src/components/SearchBar.astro
+++ b/src/components/SearchBar.astro
@@ -1,14 +1,21 @@
 ---
-// Logic to make conffeti when click on the click button
 ---
+
+<script>
+document.getElementById("showSearchButton").addEventListener("click", () => {
+    let searchForm = document.getElementById("searchForm")
+    let buttonClick = document.getElementById("showSearchButton")
+    searchForm.classList.toggle("hidden")
+})
+</script>
 {
     <div class="flex flex-col items-center text-white text-2xl font-bold m-8">
         <p>
             Click to search for your favorite characters! 
         </p>
-        <button type="submit" class="text-white bg-lime-500 hover:bg-lime-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-md px-8 py-2 mt-4 dark:bg-lime-500 dark:hover:bg-lime-700 dark:focus:ring-blue-800">Click</button>
+        <button id="showSearchButton" type="submit" class="text-white bg-lime-500 hover:bg-lime-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-md px-8 py-2 mt-4 dark:bg-lime-500 dark:hover:bg-lime-700 dark:focus:ring-blue-800">Click</button>
     </div>
-    <form class="sm:mx-32 md:mx-56 mt-8 hidden">   
+    <form id="searchForm" class="sm:mx-32 md:mx-56 mt-8 hidden">   
         <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
         <div class="relative">
             <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
