--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+} */
+
 
