--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 
 .glow-on-hover:before {
   content: "";
-  background: linear-gradient(45deg, #97ce4c, #e4a788, #f0e14a, #44281d, #e89ac7);
+  background: linear-gradient(45deg, #97ce4c, #24325fff, #b7e4f9ff);
   background-size: 400%;
   z-index: -1;
   top: 0;
